tests/baselines/reference/parserErrantEqualsGreaterThanAfterFunction1.errors.txt
==== tests/cases/compiler/parserErrantEqualsGreaterThanAfterFunction1.ts (3 errors) ====
    function f() => 4;
                 ~~
!!! parserErrantEqualsGreaterThanAfterFunction1.ts(1,14): error TS1008: Unexpected token; '{' expected.
                    ~
!!! parserErrantEqualsGreaterThanAfterFunction1.ts(1,17): error TS1005: '{' expected.
                      
!!! parserErrantEqualsGreaterThanAfterFunction1.ts(1,19): error TS1005: '}' expected.